# imaginary-tfl-ultimate-super-bot

./: README.md  imaginary-tfl-ultimate-super-bot.cabal
src/: Analizer.hs  Main.hs  Parser.hs  Types.hs
